[gd_scene load_steps=2 format=3 uid="uid://didx2gtuepwdx"]

[ext_resource type="Script" uid="uid://bol7el1uks74f" path="res://main.gd" id="1_ig7tw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainLabel" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "WebSocket Server Example"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Status" type="HBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Status"]
layout_mode = 2
text = "Status:"

[node name="StatusText" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Status"]
layout_mode = 2
text = "N/A"

[node name="PeerCount" type="HBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="PeersLabel" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/PeerCount"]
layout_mode = 2
text = "Peer Count:"

[node name="PeersText" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/PeerCount"]
layout_mode = 2
text = "N/A"

[node name="Sent" type="HBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="SentLabel" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Sent"]
layout_mode = 2
text = "Sent:"

[node name="SentText" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Sent"]
layout_mode = 2
text = "N/A"

[node name="Received" type="HBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ReceivedLabel" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Received"]
layout_mode = 2
text = "Received:"

[node name="ReceivedText" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Received"]
layout_mode = 2
text = "N/A"
